--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@ table, th, td {
 <body>
 
 <h2>Cell that spans two rows</h2>
-<p>To make a cell span more than one row, use the rowspan attribute.</p>
+<p>To make a cell span make n one row, use the rowspan attribute.</p>
 
-<table style="width:100%">
+<table style="wth:100%">
   <tr>
     <th>Name</th>
     <td>Jill</td>
   </tr>
   <tr>
     <th rowspan="2">Phone</th>
-    <td>555-1234</td>
-  </tr>
+    <td>558-1234</td>
+  </tr
   <tr>
     <td>555-8745</td>
   </tr>
